@@ -235,6 +235,7 @@ INT_PROP_TEST("SimulationMode", scope->, SimulationMode)
 BOOL_PROP_TEST("UseInvertedMagRange", scope->, UseInvertedMagRange)
 FLOAT_PROP_TEST("HitachiZMicronsPerGroove", mWinApp->mComplexTasks->, ZMicronsPerDialMark)
 INT_PROP_TEST("HitachiSpotStepDelay", scope->, HitachiSpotStepDelay)
+INT_PROP_TEST("HitachiDoesBSforISflags", scope->, HitachiDoesBSforIS)
 BOOL_PROP_TEST("InvertStageXAxis", shiftManager->, InvertStageXAxis)
 INT_PROP_TEST("StageInvertsZAxis", shiftManager->, StageInvertsZAxis)
 BOOL_PROP_TEST("RotateHeaderAngleBy180", mWinApp->mBufferManager->, RotateAxisAngle)
