@@ -17,7 +17,7 @@
       ones for Falcon cameras in <a href="#FalconControls">Controls for FEI Falcon 
       Camera</a>. The simpler set of options for other cameras that can take frames are described in 
       <A href="#FrameControls">Controls for Other Cameras that Can Take Frames 
-      (OneView and Rio)</A>. &nbsp;Controls for STEM acquisition, and modifications of the existing 
+      (OneView, Rio, Tietz XF416/Fn16)</A>. &nbsp;Controls for STEM acquisition, and modifications of the existing 
       controls, are described in
       <A HREF="#STEMcontrols">Controls in STEM Mode.</A>
     </P>
@@ -545,14 +545,14 @@
       name subfolders will not be available in the other dialog.</P>
     <P>&nbsp;</P>
     <P><i><A NAME="FrameControls"></A><B><FONT size="3">Controls for Other Cameras that Can Take Frames 
-      (OneView and Rio)</FONT></B></i></P>
+      (OneView, Rio, and Tietz XF416/Fn16)</FONT></B></i></P>
     <P>For a camera capable of taking frames, controls in this section will appear 
       based on an entry in SerialEMproperties.txt: either ones related to saving 
       frames, or ones related to aligning frames, or both.</P>
     <P><b>Frame Time</b></P>
     <P>The frame time entry is enabled, and becomes relevant, when either saving or 
       aligning of the frames is selected.&nbsp; Enter the exposure time of each frame of the exposure.&nbsp; The frame time is constrained to 
-      be a multiple of the basic frame rate of the camera, which depends on binning for OneView/Rio cameras.</P>
+      be a multiple of the basic frame rate of the camera.  This depends on binning for OneView/Rio cameras, or on the size being acquired in Y on the sensor for Tietz cameras.</P>
     <P><b>Align Frames</b></P>
     <P>Select this checkbox to have frames aligned with the Framealign module or to 
       have a command file written for aligning 
